--- a/configure.ac
+++ b/configure.ac
@@ -8,12 +8,12 @@
 # m4_define([VERSION_NUMBER], m4_esyscmd([git describe --abbrev=4 | tr -d '\n']))
 
 AC_PREREQ(2.61)
-AC_INIT([xlockmost], [0.0.1], [alexey.smirnov@gmx.com])
+AC_INIT([xlockmost], [0.1], [alexey.smirnov@gmx.com])
 
 AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
 AM_MAINTAINER_MODE
 
-AC_CONFIG_HEADER(config.h)
+AC_CONFIG_HEADER([config.h])
 
 AC_PROG_CC
 AC_PROG_INSTALL
@@ -26,13 +26,21 @@ AC_CHECK_HEADERS([signal.h pwd.h string.h],,
      AC_MSG_ERROR([missing required header (see above)])
     ])
 
-AC_ARG_ENABLE(debug,
-    AC_HELP_STRING([--enable-debug], [enable debugging code]),
-    [if test "x$enableval" = "xyes"; then
-        AC_DEFINE(HAVE_DEBUG, [1], [Define to enable debugging])
-        CFLAGS="-Wall -g -O0"
-     fi
-    ])
+PKG_CHECK_MODULES([X11], [x11])
+AC_CHECK_HEADER([security/pam_appl.h],
+    [
+     AC_CHECK_LIB([pam], [pam_start],
+         [
+          PAM_LIBS="-lpam"
+          AC_SUBST(PAM_LIBS)
+         ],
+         [
+          AC_MSG_ERROR([*** libpam missing])
+         ])
+     ],
+     [
+      AC_MSG_ERROR([PAM headers not found])
+     ])
 
 AC_FUNC_VPRINTF
 
